test/e2e/testdata/xlistenerset-tls-termination.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: xlistenerset-tls-termination-secret
---
# ./certs/client-mtls-trustbundle.sh
#
# kubectl create secret generic example-com-tls -n xlistener-tls-termination-secret --from-file=ca.crt=example.com.crt --from-file=tls.crt=www.example.com.crt --from-file=tls.key=www.example.com.key --dry-run=client -o yaml > example-com-tls.yaml
apiVersion: v1
kind: Secret
metadata:
  name: xlistener-https-certificate
  namespace: xlistenerset-tls-termination-secret
type: kubernetes.io/tls
data:
  ca.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURWVENDQWoyZ0F3SUJBZ0lVSHhhZTdxNXQreWpGL3ZkeGZ5bDhreDNsZ0l3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5qQTJNakF4TURNMU1UVmFGdzB6TmpBMk1UY3hNRE0xTVRWYU1DMHhGVEFUQmdOVkJBb01ER1Y0CllXMXdiR1VnU1c1akxqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3Z2dFaU1BMEdDU3FHU0liM0RRRUIKQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURFUCtTeCtyeGkvbmNBaThsandlWHUxUmEweFR5azlMekJzR1N0UUFTLwp5bU9NdVdKSjVlZHdyTn [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQwakNDQXJxZ0F3SUJBZ0lVYkI2MlpaaEhMRklrakV5K3E4bFlTQTN4aUhnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0xURVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdgpiVEFlRncweU5qQTJNakF4TURNMU1UVmFGdzB6TmpBMk1UY3hNRE0xTVRWYU1Ea3hHREFXQmdOVkJBTU1EM2QzCmR5NWxlR0Z0Y0d4bExtTnZiVEVkTUJzR0ExVUVDZ3dVWlhoaGJYQnNaU0J2Y21kaGJtbDZZWFJwYjI0d2dnRWkKTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFEY2F1dE1Tc3JEN0ZoUitWWE5BVVZIa3EyQgpoN0J0UjBkeFFuSGE4R [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRRGNhdXRNU3NyRDdGaFIKK1ZYTkFVVkhrcTJCaDdCdFIwZHhRbkhhOEcyQ0tuMW5mamE5TTJGMjRyRjFDbDhvUjNRSHk1UFVXUksyMzFPdAppbWtBM3JkVnhUdXFpVmhsRmhWZnN3UmNVWnhualBGeFRGbTRmSXowQXpnUnJxRTRYZzNnL0NTU0JXN1d3NUg0CmIxYlpIZTJMS0tOWXIrUDJWdGpTNm05TkI2N2FPT1ZTSHR6WGJMM01Gc3MwVTBoL2orcFNubVR1YkEzUlVMbS8KdHM1REV3ZGdoSkZNd3FSQStzaVhYTGdXUVFKREJGQnNxTHpaYmU1cUtnQkhFckZ0VkI5N3FDbU45L3F4U3J6dApOdDdkRUxVZGk5S2xYY [...]
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: xlistener-tls-termination-certificate
  namespace: xlistenerset-tls-termination-secret
spec:
  from:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    namespace: gateway-conformance-infra
  to:
  - group: ""
    kind: Secret
    namespace: xlistenerset-tls-termination-secret
    name: xlistener-https-certificate
---
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XListenerSet
metadata:
  name: xlistener-set-tls-termination
  namespace: gateway-conformance-infra
spec:
  parentRef:
    name: xlistener-gateway
    namespace: gateway-conformance-infra
  listeners:
  - name: extra-https-tls-termination
    port: 19443
    protocol: HTTPS
    hostname: www.example.com
    tls:
      mode: Terminate
      certificateRefs:
      - name: xlistener-https-certificate
        namespace: xlistenerset-tls-termination-secret
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: HTTPRoute
        group: gateway.networking.k8s.io
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xlistener-httproute-tls-termination
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - group: gateway.networking.x-k8s.io
    kind: XListenerSet
    namespace: gateway-conformance-infra
    name: xlistener-set-tls-termination
    sectionName: extra-https-tls-termination
  hostnames:
  - www.example.com
  rules:
  - backendRefs:
    - name: infra-backend-v1
      port: 8080
